# ockam

documentation/architecture/messaging/: Accessibility.md  Delivery.md  Discovery.md  Implementation.md  README.md
implementations/rust/ockam/ockam/: Cargo.toml
implementations/rust/ockam/ockam/src/: lib.rs
implementations/rust/ockam/ockam_channel/src/: local_info.rs  secure_channel_worker.rs
implementations/rust/ockam/ockam_core/src/: access_control.rs  lib.rs
implementations/rust/ockam/ockam_entity/src/: change_history.rs  channel.rs
implementations/rust/ockam/ockam_entity/src/channel/: secure_channel_worker.rs
implementations/rust/ockam/ockam_entity/src/worker/: create_key.rs
implementations/rust/ockam/ockam_executor/: Cargo.toml
implementations/rust/ockam/ockam_executor/src/: channel.rs  debug_alloc.rs  executor.rs  lib.rs  oneshot.rs  runtime.rs
implementations/rust/ockam/ockam_ffi/src/: vault.rs  vault_types.rs
implementations/rust/ockam/ockam_github/: Cargo.toml
implementations/rust/ockam/ockam_github/src/: access_control.rs  credentials_registry.rs  lib.rs  verifier.rs
implementations/rust/ockam/ockam_key_exchange_x3dh/src/: initiator.rs  responder.rs
implementations/rust/ockam/ockam_key_exchange_xx/src/: state.rs
implementations/rust/ockam/ockam_node/src/: context.rs
implementations/rust/ockam/ockam_vault/src/: asymmetric_impl.rs  secret_impl.rs  signer_impl.rs
implementations/rust/ockam/ockam_vault_core/src/: types.rs
implementations/rust/ockam/ockam_vault_test_suite/src/: key_id_impl.rs  secret_impl.rs  signer_impl.rs
(+5 files in other folders)
